# BeamAnalyzerCpp

./: .gitignore  CMakeLists.txt  README.md
include/: HardwareAbstraction.h
src/: BeamAnalyzer.cpp  HardwareAbstraction.cpp  main.cpp  zscan_demo.cpp
src/core/: BeamAnalyzer.cpp  BeamAnalyzer.h  M2Calculator.cpp  M2Calculator.h
src/gui/: BeamAnalyzerApp.qml  qml.qrc
src/qml_backend/: AnalyzerBridge.cpp  AnalyzerBridge.h  BeamData.cpp  BeamData.h  CameraProvider.cpp  CameraProvider.h
